--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="green">
                 <div class="black">
 
-                    <h1> <span> Abhishek </span> <span id="green"> yadav </span> <span> Portpolio </span></h1>
+                    <h1> <span> Abhishek </span> <span id="green"> yadav </span> <span> Portfolio </span></h1>
                 </div>
             </div>
         </div>
