--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <div class="skillName">
                                 <div class="icon"><i class="ri-braces-line"></i></div>
                                 <div class="Name" id="fd">
-                                    <h2> Frontend Develorer</h2>
+                                    <h2> Frontend Developer</h2>
                                     <p>More than 1 year</p>
                                 </div>
                             </div>
