--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio </title>
-    <link rel="icon" type="image/x-icon" href="favicon-16x16.png">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon">
+    <title>Portfolio </title>
 </head>
 
 <body>
@@ -17,6 +17,7 @@
 
     <div id="main">
         <div class="cursor"></div>
+        
         <div id="loader">
             <div class="green">
                 <div class="black">
@@ -36,8 +37,10 @@
                 <a href="#page2">skills</a>
                 <a href="#page3">Services</a>
                 <a href="#page4">Contact</a>
-                <a href="#"><i class="ri-download-cloud-line"></i> CV</a>
-
+                <!-- <a href="#"><i class="ri-download-cloud-line"></i> CV</a> -->
+                
+                    <a href="https://www.overleaf.com/download/project/635d76b28f2132228cf86a5d/build/188b92c90f6-c6bc8b1ec3fc3ed6/output/output.pdf?compileGroup=standard&clsiserverid=clsi-pre-emp-e2-f-t5zt&enable_pdf_caching=true&popupDownload=true" target="_blank" download=""><i class="ri-download-cloud-line"></i> CV</a>
+                
             </div>
         </nav>
 
@@ -106,14 +109,14 @@
                                 <div class="icon"><i class="ri-database-2-fill"></i></div>
                                 <div class="Name" id="bd">
                                     <h2> Backend Developer</h2>
-                                    <p>More than 4 months</p>
+                                    <p>More than 6 months</p>
                                 </div>
                             </div>
                             <div class="icon" id="backend"><i class="ri-arrow-right-s-fill"></i></div>
                         </div>
                     </div>
                     <div class="languages">
-
+<!-- <img src="lang/react.png" alt=""> -->
                         <div id="language1">
 
                         </div>
