--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a href="#page4">Contact</a>
                 <!-- <a href="#"><i class="ri-download-cloud-line"></i> CV</a> -->
                 
-                    <a href="https://www.overleaf.com/download/project/635d76b28f2132228cf86a5d/build/188b92c90f6-c6bc8b1ec3fc3ed6/output/output.pdf?compileGroup=standard&clsiserverid=clsi-pre-emp-e2-f-t5zt&enable_pdf_caching=true&popupDownload=true" target="_blank" download=""><i class="ri-download-cloud-line"></i> CV</a>
+                    <a href="https://drive.google.com/file/d/1RXD8BrYS9JkIX-4B0OGqW4hgjcl_ybDP/view?usp=sharing" target="_blank" download=""><i class="ri-download-cloud-line"></i> CV</a>
                 
             </div>
         </nav>
@@ -58,11 +58,13 @@
                         <h2>And I'm a <span class="typing"></span></h2>
                     </div>
                     <div class="social">
-                        <a href=""><i class="ri-github-fill"></i></a>
-                        <a href=""><i class="ri-linkedin-box-fill"></i></a>
+                        <a href="https://github.com/ABHISHEKyadav281"><i class="ri-github-fill"></i></a>
+                        <a href="https://www.linkedin.com/in/abhishek-yadav-aab95b202"><i class="ri-linkedin-box-fill"></i></a>
                     </div>
                     <div class="button"> 
-                            <p> Hire me</p>
+                            <a href="#page4" >
+                                <p> Hire me</p>
+                            </a>
                         </div>
                    </div>
                 <div class="rightpic">
@@ -203,12 +205,13 @@
                             </div>
                         </div>
                         <div class="message">
-                            <form action="#">
+                            <form action="https://formspree.io/f/mzbljqlg"
+                            method="POST">
                                 <h2>Message me</h2>
-                                <input type="text" placeholder="Name" required>
-                                <input type="email" placeholder="Email">
-                                <input type="text" placeholder="Subject" id="subj">
-                                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                                <input type="text" name="name" placeholder="Name" required>
+                                <input type="email" name="email" placeholder="Email">
+                                <input type="text" name="subj" placeholder="Subject" id="subj">
+                                <textarea cols="30" name="msg" rows="10" placeholder="Message"></textarea>
                                 <input type="submit" value="Send message" id="done">
                             </form>
                         </div>
