--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                     <div class="social">
                         <a href="https://github.com/ABHISHEKyadav281"><i class="ri-github-fill"></i></a>
                         <a href="https://www.linkedin.com/in/abhishek-yadav-aab95b202"><i class="ri-linkedin-box-fill"></i></a>
+                        <a href="https://leetcode.com/ABHISHEKyadav281/"><i class="ri-code-box-line"></i></i></a>
                     </div>
                     <div class="button"> 
                             <a href="#page4" >
