--- a/index.html
+++ b/index.html
@@ -183,8 +183,7 @@
                     <div class="details">
                         <div class="info">
                             <h2>Get in Touch</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, iste temporibus officiis
-                                quasi ullam nesciunt rerum quas voluptas exercitationem tenetur?</p>
+                            <p>Feel free to connect for a discussion on leveraging my DSA and MERN stack skills to bring innovative solutions to your computer science projects.</p>
 
                             <div class="b1"> <i class="ri-user-3-fill"></i>
                                 <div class="b2">
